--- a/Scp053/Scp053.csproj
+++ b/Scp053/Scp053.csproj
@@ -152,6 +152,7 @@
         <Compile Include="Components\Features\CoroutineRunner.cs" />
         <Compile Include="Components\Features\HighlightManager.cs" />
         <Compile Include="Components\Features\Scp053Properties.cs" />
+        <Compile Include="Components\Features\Utils.cs" />
         <Compile Include="Components\Scp053Component.cs" />
         <Compile Include="Config.cs" />
         <Compile Include="Events\Components\ICancelableEvent.cs" />
